--- a/identity-service/identity-service/pom.xml
+++ b/identity-service/identity-service/pom.xml
@@ -88,6 +88,12 @@
 			<version>2.2.224</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.33.0</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
