--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -17,3 +17,10 @@ spring:
               - Path=${app.api-prefix}/identity/**
             filters:
               - StripPrefix=1
+          - id: chat-service
+            uri:
+              http://localhost:8081
+            predicates:
+              - Path=${app.api-prefix}/chat/**
+            filters:
+              - StripPrefix=1
