--- a/web-app/package.json
+++ b/web-app/package.json
@@ -14,14 +14,20 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.2.2",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3",
     "vue-sweetalert2": "^5.0.11",
-    "vuetify": "^3.7.0"
+    "vuetify": "^3.7.0",
+    "webstomp-client": "^1.2.6",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
