--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -24,3 +24,10 @@ spring:
               - Path=${app.api-prefix}/chat/**
             filters:
               - StripPrefix=1
+          - id: friend-service
+            uri:
+              http://localhost:8083
+            predicates:
+              - Path=${app.api-prefix}/friend/**
+            filters:
+              - StripPrefix=1
