--- a/web-app/package.json
+++ b/web-app/package.json
@@ -23,6 +23,7 @@
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "uuid": "^10.0.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3",
     "vue-sweetalert2": "^5.0.11",
