modified send message realtime, send toast notifications realtime, use kafka send notification to notification-service in Chat-service

--- a/chat-service/src/main/resources/application.yaml
+++ b/chat-service/src/main/resources/application.yaml
@@ -25,6 +25,13 @@ spring:
       port: 5672
       username: guest
       password: guest
+  kafka:
+    producer:
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    topic:
+      name: notifications_topics
 
 rabbitmq:
   queue:
