--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -31,3 +31,10 @@ spring:
               - Path=${app.api-prefix}/friend/**
             filters:
               - StripPrefix=1
+          - id: notification-service
+            uri:
+              http://localhost:8084
+            predicates:
+              - Path=${app.api-prefix}/notifications/**
+            filters:
+              - StripPrefix=1
