--- a/web-app/package.json
+++ b/web-app/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-vue": "^5.1.2",
     "sass": "^1.77.8",
     "vite": "^5.4.1"
