--- a/chat-service/src/main/resources/application.yaml
+++ b/chat-service/src/main/resources/application.yaml
@@ -10,6 +10,8 @@ server:
 spring:
   application:
     name: chat-service
+  profiles:
+    active: ""
   datasource:
     url: "jdbc:mysql://localhost:3306/chat-realtime_chat"
     driverClassName: "com.mysql.cj.jdbc.Driver"
@@ -19,6 +21,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import: "optional:configserver:http://localhost:8071/"
   rabbitmq:
     stream:
       host: localhost
