--- a/identity-service/src/main/resources/application.yml
+++ b/identity-service/src/main/resources/application.yml
@@ -29,12 +29,24 @@ management:
     web:
       exposure:
         include: "*"
-  health:
-    readiness-state:
+    endpoint:
+      shutdown:
+        access: unrestricted
+  info:
+    env:
       enabled: true
-    liveness-state:
-      enabled: true
-  endpoint:
-    health:
-      probes:
-        enabled: true
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "identity"
+    description: "Identity service application"
+    version: "1.0.0"
