--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -50,19 +50,27 @@ management:
     web:
       exposure:
         include: "*"
-  health:
-    readiness-state:
+    endpoint:
+      shutdown:
+        access: unrestricted
+  info:
+    env:
       enabled: true
-    liveness-state:
-      enabled: true
-  endpoint:
-    health:
-      probes:
-        enabled: true
 
-app:
-  services:
-    identity: http://localhost:8080/identity
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "notification"
+    description: "Notification service application"
+    version: "1.0.0"
 
 
 logging:
